app/styles/game-board.css
@keyframes appear {
  0% {
    transform: scale(0);
    opacity: 0;
  }

  80% {
    opacity: 1;
    transform: scale(1.2);
  }

  100% {
    transform: scale(1);
  }
}

@keyframes card-appear {
  from {
    transform: scale(0.8);
    opacity: 0;
  }

  to {
    transform: scale(1);
    opacity: 1;
  }
}

.game-board {
  display: grid;
  grid-template-columns: 1fr 400px;
  grid-template-rows: repeat(2, 1fr);
  overflow: hidden;
  height: 100%;
}

.game-board-dialog {
  height: 100%;
  width: 100%;
  position: fixed;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 64px;
  z-index: 1;
  background-color: #0007;
  overflow: auto;
}

.game-board-dialog-content {
  background-color: #fff;
  padding: 32px;
  border-radius: 8px;
  border: 1px solid #777;
}

.game-board-deck {
  grid-column: 1;
  grid-row: 1 / -1;
}

.game-board-play {
  grid-column: 2;
  grid-row: 2;
}

.game-board-tokens {
  grid-column: 2;
  grid-row: 1;
}

.token-area {
  grid-row: 2;
  grid-column: 2;
}

.token-area__actions {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

.token-area__actions > * {
  margin: 12px;
}

.token-area__tokens {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
}

.token-area__tokens > * {
  margin: 12px;
  animation: appear 250ms ease-out forwards;
}

.actions-area {
  grid-row: 1;
  grid-column: 2;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.actions-area > * {
  margin: 8px;
}

.actions-area > :last-child {
  margin-top: 48px;
}

.play-area {
  padding: 24px;
  background: #dddd;
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 100%;
  transition: transform 400ms ease-out;
  overflow: scroll;
}

.play-area__grid {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
  gap: 24px;
}

.play-area__item {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.play-area__item > button {
  margin: 8px;
}

.play-area__card {
  width: 300px;
  transform: scale(1);
  transition: transform 200ms ease-in-out;
  transform-origin: 0 0;
}

.play-area__card.is-clicked {
  transform: scale(2);
}

.play-area__discard-row {
  display: flex;
  justify-content: flex-start;
  flex-direction: row;
}

.play-area__title {
  margin: 32px 16px 16px;
  font-size: 48px;
  font-weight: bold;
  flex: 1;
}

.play-area.is-shown {
  transform: translateX(-100%);
}

.card-area {
  justify-content: center;
  align-items: center;
  grid-column: 1;
  grid-row: 1 / -1;
  width: 100%;
  display: flex;
  flex-direction: column;
}

.card-area__card {
  max-width: 600px;
  width: 100%;
  animation: card-appear 400ms ease-out forwards;
}

.card-area__actions {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  animation: card-appear 400ms ease-out forwards;
}

.card-area__actions > * {
  margin: 12px;
}

